tests/error/type_errors/call_unexpected_arg.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy(compile=True)
5:    def foo(x: int) -> int:
6:        return foo(x, x)
                        ^
GuppyTypeError: Unexpected argument
